--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,8 @@
     <script src="./index.js" defer></script>
 </head>
 <body>
-  <input type="text" id="inputUrl" placeholder="Введите URL">
-  <button onclick="redirect()">Перейти</button>
-  <button onclick="checkProtocol()">Проверить</button>
+  <input type="text" id="input" placeholder="Введите URL">
+    <button id="redirect">Перейти</button>
+    <button id="check">Проверить</button>
 </body>
 </html>
